tests/paczka1/fuzzy1/71273718.err
Error in line 2: t1s S858 52,0
Error in line 1: KgBQu A204 3,5
Error in line 7: ShPO S858 -2,2
Error in line 3: t1s S634 56,2
Error in line 19: S858 S858 29,3
Error in line 21: pCZ S441 74,6
Error in line 16: R8Kjn0IKW A204 5,7
Error in line 6: ShPO S858 89,2
